# finsight-agent

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260614_0001_initial_research_persistence.py  20260614_0002_add_research_status_fields.py  20260617_0003_add_research_retry_lineage.py  20260618_0004_add_agent_step_timing.py  20260619_0005_add_agent_step_llm_diagnostics.py  20260619_0006_add_llm_call_events.py  20260621_0007_add_report_quality_details.py
docs/: AGENTS_FULL.md  TESTING_PLAN.md
docs/specs/: 4N-report-quality-grounding.md  4O-business-overview-filing-evidence.md  (+5 more)
tests/: test_api_schemas.py  test_app.py  test_business_overview_synthesizer.py  test_companies_api.py  test_company_resolver.py  test_compliance.py  test_config.py  test_database.py  test_eval_evaluators.py  test_eval_graph_suite.py  test_eval_models.py  test_eval_runner.py  test_filing_parser.py  test_financial_presentation.py  test_graph.py  test_graph_result_validator.py  test_graph_runner.py  test_health.py  test_live_llm.py  test_live_sec.py  test_live_sec_graph.py  test_live_sec_llm_graph.py  test_llm_client.py  test_llm_usage.py  test_metrics.py  test_migrations.py  test_readme_docs.py  test_report_citation_audit.py  test_report_generator.py  test_report_validator.py  test_repository.py  test_research_api.py  test_research_background_integration.py  test_research_job.py  test_research_status.py  test_research_synthesizer.py  test_resolver_loader.py  test_risk_analyzer.py  test_sec_client.py
(+43 files in other folders)
