[project]
name = "finsight-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.7",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "langsmith>=0.8.14",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]

[project.scripts]
finsight-agent = "finsight_agent:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", "venv", ".git", ".pytest_cache"]
